extends PanelContainer

@onready var email_list = $Layout/ContentArea/HSplitContainer/EmailList
@onready var subject_label = $Layout/ContentArea/HSplitContainer/EmailDetail/SubjectLabel
@onready var body_label = $Layout/ContentArea/HSplitContainer/EmailDetail/BodyLabel
@onready var http_request = $HTTPRequest
var dragging = false
var drag_start_position = Vector2()
@onready var title_bar = $Layout/TitleBar

var emails = []

func _ready():
	$Layout/TitleBar/CloseButton.pressed.connect(queue_free)
	title_bar.gui_input.connect(_on_title_bar_gui_input)
	email_list.item_selected.connect(_on_email_selected)
	
	body_label.bbcode_enabled = true 
	body_label.meta_clicked.connect(_on_meta_clicked)
	
	http_request.request_completed.connect(_on_data_received)
	http_request.request("http://127.0.0.1:8000/mission/mission_1")
	
func _on_title_bar_gui_input(event):
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_LEFT:
			if event.pressed:
				dragging = true
				drag_start_position = get_global_mouse_position() - global_position
				move_to_front()
			else:
				dragging = false
	elif event is InputEventMouseMotion and dragging:
		global_position = get_global_mouse_position() - drag_start_position

func _on_data_received(result, response_code, _headers, body):
	print("ğŸ“¨ [EmailApp] ì‘ë‹µ ì½”ë“œ: ", response_code)
	
	if result != HTTPRequest.RESULT_SUCCESS or response_code != 200:
		print("âŒ [EmailApp] í†µì‹ /ì„œë²„ ì˜¤ë¥˜")
		return

	var json = JSON.new()
	if json.parse(body.get_string_from_utf8()) != OK:
		print("âŒ [EmailApp] JSON íŒŒì‹± ì‹¤íŒ¨")
		return
		
	var data = json.get_data()
	print("âœ… [EmailApp] ë°ì´í„° ìˆ˜ì‹ : ", data)
	
	emails = data.get("emails", [])
	print("ğŸ“§ ì´ë©”ì¼ ê°œìˆ˜: ", emails.size())
	
	_update_list_ui()

func _update_list_ui():
	email_list.clear()
	for email in emails:
		var sender = email.get("sender", "ì•Œ ìˆ˜ ì—†ìŒ")
		var subject = email.get("subject", "ì œëª© ì—†ìŒ")
		email_list.add_item("%s - %s" % [sender, subject])
	
	# â­ [ì¶”ê°€ë¨] ë©”ì¼ì´ í•˜ë‚˜ë¼ë„ ìˆìœ¼ë©´ ì²« ë²ˆì§¸ë¥¼ ìë™ìœ¼ë¡œ ì„ íƒí•´ì„œ ë³´ì—¬ì¤Œ
	if emails.size() > 0:
		email_list.select(0)       # 1. UIì—ì„œ ì²« ë²ˆì§¸ í•­ëª©ì„ íŒŒë€ìƒ‰ìœ¼ë¡œ ì„ íƒ
		_on_email_selected(0)      # 2. ì„ íƒëì„ ë•Œ ì‹¤í–‰ë˜ëŠ” í•¨ìˆ˜ë¥¼ ê°•ì œë¡œ ì‹¤í–‰

func _on_email_selected(index):
	print("ğŸ–±ï¸ ì´ë©”ì¼ ì„ íƒë¨: ì¸ë±ìŠ¤ ", index)
	
	if index < 0 or index >= emails.size():
		return

	var email = emails[index]
	subject_label.text = email.get("subject", "")
	
	var text = email.get("body", "(ë‚´ìš©ì´ ì—†ìŠµë‹ˆë‹¤)")
	
	# íŒíŠ¸ í•˜ì´ë¼ì´íŒ…
	text = _highlight_clue(text, "blue_sky_2024", "password")
	text = _highlight_clue(text, "2024", "hint")
	text = _highlight_clue(text, "990132", "id")
	
	body_label.text = text

func _highlight_clue(text: String, keyword: String, type: String) -> String:
	if keyword in text:
		# ë…¸ë€ìƒ‰ìœ¼ë¡œ ê°•ì¡°í•´ì„œ ë³´ì—¬ì¤Œ
		var bbcode = '[url={"type":"%s", "value":"%s"}][color=yellow]%s[/color][/url]' % [type, keyword, keyword]
		return text.replace(keyword, bbcode)
	return text

func _on_meta_clicked(meta):
	var data = JSON.parse_string(meta)
	if data:
		print("ì´ë©”ì¼ ë‹¨ì„œ ë°œê²¬: ", data.value)
		Global.clue_found.emit(data.type, data.value)
